# diversity_sampling

./: .gitignore  1_select_core_set.ipynb  2_augment.ipynb  3_construct_training_set.ipynb  4_downstream_finetune.ipynb  README.md  main.py  pyproject.toml
diversity_sampling/: __init__.py
diversity_sampling/database/: __init__.py
diversity_sampling/database/api/: __init__.py  insert.py  select.py
diversity_sampling/database/connection/: __init__.py  connection.py
diversity_sampling/dataset/: test.csv
diversity_sampling/models/: __init__.py
diversity_sampling/models/augmentation/: __init__.py
diversity_sampling/models/augmentation/dataclass/: __init__.py  candidates.py
diversity_sampling/models/augmentation/dataset_object/: __init__.py  dataset_object.py
diversity_sampling/models/augmentation/model/: __init__.py  augment_model.py
diversity_sampling/models/classfication/: __init__.py
diversity_sampling/models/classfication/dataset_object/: __init__.py  dataset_object.py
diversity_sampling/models/classfication/model/: __init__.py  classifier.py
diversity_sampling/models/coreset_selection/: __init__.py
diversity_sampling/models/coreset_selection/dataclass/: __init__.py  training_dynamic.py
diversity_sampling/models/coreset_selection/dataset_object/: __init__.py  dataset_object.py
diversity_sampling/models/coreset_selection/model/: __init__.py  selector.py
diversity_sampling/storage/trained_results/diverse/: random_r_0.00.pt  random_r_0.10.pt  random_r_0.20.pt  random_r_0.30.pt  random_r_0.40.pt  random_r_0.50.pt  random_r_0.60.pt  (+1 more)
(+8 files in other folders)
