[project]
name = "diversity-sampling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "asyncpg>=0.31.0",
    "bitsandbytes>=0.49.2",
    "ipykernel>=7.2.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psycopg[binary]>=3.3.3",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.hatch.build.targets.wheel]
packages = ["diversity_sampling"]
